--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -446,6 +446,9 @@ h4.title {
 }
 .threads-area{
     .threads-grid{
+        @include respond (maxWidth992){
+            margin-top: 2rem;
+        }
         @include respond (minWidth992){
             display: flex;
         align-items: center;
@@ -467,6 +470,9 @@ h4.title {
         .threads-grid-items{
             @include respond (maxWidth992){
                 padding: 0 1.5rem;
+                .img-wrapper{
+                    margin-top: 2rem;
+                }
             }
             @include respond (minWidth992){
                 flex: 0 0 50%;
